added pictures and tours to tours page

--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -38,7 +38,60 @@
             </ul>
         </nav>
         <main>
-            <h2 class="title">TOURS</h2>
+            <h1 class="title">TOURS</h1>
+            <h2>TOP 3 COZUMEL TOURS</h2>
+            <div id="tours">
+                <div id="picture-one">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/tour1.jpeg"         
+                    alt="palancar snorkling" width="300" height="451">
+                    <h3>#1 Cozumel Palancar Snorkeling Tour:</h3>
+                    <p>Palancar, Columbia and El Cielo Reefs</p>
+                    <a target="_blank" href="https://www.viator.com/tours/Cozumel/Cozumel-Snorkel-tour-Palancar-reef-Columbia-reef-and-El-Cielo-Sandbar/d632-103974P5">MORE INFO</a>
+                </div>
+                <div id="picture-two">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/tour2.jpeg"
+                    alt="Catamaran snorkling" width="300" height="451">
+                    <h3>#2 Cozumel Catamaran Snorkeling Tour:</h3>
+                    <p>El Cielo and Tortugas Beach Club</p>
+                    <a target="_blank" href="https://www.viator.com/tours/Cozumel/Catamaran-Snorkel-to-El-Cielo-and-Tortugas-Beach-Club/d632-120878P12">MORE INFO</a>
+                </div>
+                <div id="picture-three">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/tour3.jpeg"
+                    alt="Catamaran snorkling" width="300" height="451">
+                    <h3>#3 Cozumel Zipline:</h3>
+                    <p>Cozumel zipline thrill adventures</p>
+                    <a target="_blank" href="https://www.viator.com/tours/Cozumel/Awesome-Zipline-thrill-along-2400-ft-Amazing-experience-of-life/d632-333642P2">MORE INFO</a>
+                </div>
+            </div>
+            <div id="beachdiv">
+                <div id="beachmap">
+                    <picture>
+                        <img src="images/beachmap.jpeg" alt="beach map">
+                    </picture>
+                </div>
+                <div id="beaches">
+                    <picture >
+                        <source  srcset="images/beach1.jpeg" media="(min-width: 900px)">
+                    <img src="images/beach1small.jpeg" alt="palancar beach">
+                    </picture>
+                    <picture >
+                        <source  srcset="images/beach2.jpeg" media="(min-width: 900px)">
+                    <img src="images/beach2small.jpeg" alt="el cielo beach">
+                    </picture>
+                    <picture >
+                        <source  srcset="images/beach3.jpeg" media="(min-width: 900px)">
+                    <img src="images/beach3small.jpeg" alt="Isla de pasion beach">
+                    </picture>
+                </div>
+
+            </div>
+    
         </main>
         <footer>
             <p>
