--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -19,13 +19,6 @@
             <picture id="logo">
                 <img src="images/logo.png" width="300" alt="scootslogo">
             </picture>
-            <section id="header-img">
-                <picture>
-                <source srcset="images/palmtrees300.jpeg" media="(min-width: 401px) and (max-width: 899px)">
-                <source id="header" srcset="images/palmtrees600.jpeg" media="(min-width: 900px)">
-            <img id="small-header-img" src="#" alt="hero">
-            </picture>
-            </section>
         </header>
         <nav class="navbar">
             <ul class="navigation">
@@ -72,21 +65,22 @@
             <div id="beachdiv">
                 <div id="beachmap">
                     <picture>
-                        <img src="images/beachmap.jpeg" alt="beach map">
+                        <img class="responsive" src="images/beachmap.jpeg" alt="beach map">
                     </picture>
                 </div>
+                <hr>
                 <div id="beaches">
-                    <picture >
+                    <picture id="beach1">
                         <source  srcset="images/beach1.jpeg" media="(min-width: 900px)">
-                    <img src="images/beach1small.jpeg" alt="palancar beach">
+                    <img class="responsive" src="images/beach1small.jpeg" alt="palancar beach">
                     </picture>
-                    <picture >
+                    <picture id="beach2">
                         <source  srcset="images/beach2.jpeg" media="(min-width: 900px)">
-                    <img src="images/beach2small.jpeg" alt="el cielo beach">
+                    <img class="responsive" src="images/beach2small.jpeg" alt="el cielo beach">
                     </picture>
-                    <picture >
+                    <picture id="beach3">
                         <source  srcset="images/beach3.jpeg" media="(min-width: 900px)">
-                    <img src="images/beach3small.jpeg" alt="Isla de pasion beach">
+                    <img class="responsive" src="images/beach3small.jpeg" alt="Isla de pasion beach">
                     </picture>
                 </div>
 
