added text to pictures of beach guide

--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -62,11 +62,13 @@
                     <a target="_blank" href="https://www.viator.com/tours/Cozumel/Awesome-Zipline-thrill-along-2400-ft-Amazing-experience-of-life/d632-333642P2">MORE INFO</a>
                 </div>
             </div>
+            <h2>A Guide to the Beaches of Cozumel</h2>
             <div id="beachdiv">
                 <div id="beachmap">
                     <picture>
                         <img class="responsive" src="images/beachmap.jpeg" alt="beach map">
                     </picture>
+                    <!-- <p>Cozumel has some of the finest beaches in the Riviera Maya. The island is famous for being not only extraordinarily beautiful, but also very diverse: The sheltered west coast is a Caribbean Eden; the north coast has romantic hidden nooks; the east is wild and exciting, and the southern tip is a striking natural wonder. Each of these places has beaches worth exploring.</p> -->
                 </div>
                 <hr>
                 <div id="beaches">
@@ -74,14 +76,20 @@
                         <source  srcset="images/beach1.jpeg" media="(min-width: 900px)">
                     <img class="responsive" src="images/beach1small.jpeg" alt="palancar beach">
                     </picture>
+                    <h3>PALANCAR BEACH</h3>
+                    <p>Located 20 kilometers south of San Miguel Cozumel's town center, it is possibly the most popular beach in Cozumel. Palacar Beach is easily accessible through a road that takes you from the main highway to the beautiful white sand beach. Here, you will also find a beach club with a restaurant, bar, sunbeds, and various activities.</p>
                     <picture id="beach2">
                         <source  srcset="images/beach2.jpeg" media="(min-width: 900px)">
                     <img class="responsive" src="images/beach2small.jpeg" alt="el cielo beach">
                     </picture>
+                    <h3>EL CIELO BEACH</h3>
+                    <p>Absolute must-visit. Hundreds of starfish covering the white ocean floor make this beach and off-coast sandbank one of the most memorable sites on the island. El Cielo can only be reached by boat, either a private vessel with the proper permits or a guided tour. </p>
                     <picture id="beach3">
                         <source  srcset="images/beach3.jpeg" media="(min-width: 900px)">
                     <img class="responsive" src="images/beach3small.jpeg" alt="Isla de pasion beach">
                     </picture>
+                    <h3>ISLA DE PASION BEACH</h3>
+                    <p>Uninhabited and just one kilometer long, this gorgeous island is one of the most coveted spots in Cozumel. It sits just off the north coast and is part of a wildlife refuge. And although the name is a bit cheesy, the location is truly idyllic –plus, it is actually a popular wedding destination. There are no roads to the island, so you must take a tour or catch a private boat. Once there, you can relax at the beach, enjoy the beach club, or paddle a kayak along the mangrove canals of the lagoon. </p>
                 </div>
 
             </div>
