added social media icons

--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -96,14 +96,24 @@
     
         </main>
         <footer>
+            <div>
             <p>
                 &copy;<span id="year"></span> |
-                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Diana Urbina Guerra</a> | VA, USA
+                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | VA, USA
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
             <p>Last Modified:</p>
             <p id="lastMod"></p>
+            <p>E-mail: CustomerService@Scoots.com</p>
+            <p>Phone: 1-800-122-3456</p>
+            </div>
+            <div>
+                <p>
+                <img src="images/facebook.png"><span class="socialdividers">.:.</span> 
+                <img src="images/instagram.png"><span class="socialdividers">.:.</span> 
+                <img src="images/twitter.png"></span></p>
+            </div>
         </footer>
     </body>
 
