--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -176,14 +176,24 @@
             </form>
         </main>
         <footer>
+            <div>
             <p>
                 &copy;<span id="year"></span> |
-                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Diana Urbina Guerra</a> | VA, USA
+                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | VA, USA
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
             <p>Last Modified:</p>
             <p id="lastMod"></p>
+            <p>E-mail: CustomerService@Scoots.com</p>
+            <p>Phone: 1-800-122-3456</p>
+            </div>
+            <div>
+                <p>
+                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
+            </div>
         </footer>
     </body>
 
