--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -109,9 +109,9 @@
             </div>
             <div>
                 <p>
-                <img src="images/facebook.png"><span class="socialdividers">.:.</span> 
-                <img src="images/instagram.png"><span class="socialdividers">.:.</span> 
-                <img src="images/twitter.png"></span></p>
+                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
             </div>
         </footer>
     </body>
