--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="scoots-s.css" />
         <link rel="stylesheet" href="scoots-m.css" />
         <link rel="stylesheet" href="scoots-l.css" />
+        <link rel="stylesheet" href="normalize.css" />
         <script defer src="scoots.js"></script>
     </head>
     <body>
