completed home page

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <main>
-            <h2 class="title">TYPES OF RENTALS</h2>
+            <h2 class="title">RENTALS IN SCOOTS</h2>
             <div class="rentals-div">
                 <div id="option1">
                     <picture id="rental-img1">
@@ -72,6 +72,70 @@
             <form  action="reservations.html">
                 <input id="button" type="submit" value="Start a Reservation" />
             </form>
+            <h2>Where to find us...</h2>
+            <div id="locationsdiv">
+                <div class="locationspic">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/location1.jpeg"         
+                    alt="palancar snorkling" width="200" height="300">
+                    <div>
+                    <h3>Main Location</h3>
+                    <p>5 Avenida Bis Sur 1197</p>
+                    <p>Gonzalo Guerrero</p>
+                    <p>77600 San Miguel de Cozumel, Q.R.</p>
+                    <p>Mexico</p>
+                    </div>
+                </div>
+                <div class="locationspic">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/location2.jpeg" 
+                    alt="Catamaran snorkling" width="200" height="300">
+                    <div>
+                    <h3>Second Location</h3>
+                    <p>Punta Nte.</p>
+                    <p>77682 San Miguel de Cozumel, Quintana Roo</p>
+                    <p>Mexico</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="visiblehr">
+            <h2>Some Attractions in Conzumel</h2>
+            <div id="attractionsdiv">
+                <div id="attraction1">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/attraction1.jpeg"         
+                    alt="scuba diving" width="200" height="375">
+                    <h3>Scuba Diving</h3>
+                    <p>*Location: Pancalar Beach</p>
+                </div>
+                <div id="attraction2">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/attraction2.jpeg" 
+                    alt="corn" width="200" height="375">
+                    <h3>Conzumel Street Food</h3>
+                    <p>*Location: La Posada de Marta</p>
+                </div>
+                <div id="attraction3">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/attraction3.jpeg" 
+                    alt="paddling" width="200" height="375">
+                    <h3>Paddling with view</h3>
+                    <p>*Location: El Cielo Beach</p>
+                </div>
+                <div id="attraction3">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="images/attraction4.jpeg" 
+                    alt="street art" width="200" height="375">
+                    <h3>Street Art</h3>
+                    <p>*Location: 7671 San Miguel de Conzumel</p>
+                </div>
+            </div>
             <div class="weather-div">
                 <div id="current-weather-div">
                     <h3>Current Weather</span></h3>
