fixed weather and rental options spacing

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -140,7 +140,7 @@
                 <div id="current-weather-div">
                     <h3>Current Weather</span></h3>
                     <img id="c-icon" src="#" alt="c-icon" width="50">
-                    <p>Description: <span id="c-description"></span>%</p>
+                    <p>Description: <span id="c-description"></span></p>
                     <p class="stats">Humidity: <span id="c-humidity"></span>%</p>
                     <p>Temp: <span id="c-temp"></span>°F</p>
                 </div>
