--- a/scoots/resource.html
+++ b/scoots/resource.html
@@ -33,7 +33,7 @@
         </nav>
         <main>
 
-            <h1>Resources</h1>
+            <h1 class="title">Resources</h1>
             <div id="resourcesdiv">
                 <h2>HOME</h2>
                 <h3>Rentals images</h3>
@@ -69,9 +69,10 @@
             <div>
             <p>
                 &copy;<span id="year"></span> |
-                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | VA, USA
+                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | <a href="resource.html">Resources</a> | VA, USA
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+                
             </p>
             <p>Last Modified:</p>
             <p id="lastMod"></p>
@@ -85,5 +86,6 @@
                 <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
             </div>
         </footer>
+
     </body>
 
