--- a/scoots/sent.html
+++ b/scoots/sent.html
@@ -39,9 +39,10 @@
             <div>
             <p>
                 &copy;<span id="year"></span> |
-                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | VA, USA
+                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Scoots by Diana Urbina Guerra</a> | <a href="resource.html">Resources</a> | VA, USA
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+                
             </p>
             <p>Last Modified:</p>
             <p id="lastMod"></p>
@@ -55,5 +56,6 @@
                 <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
             </div>
         </footer>
+
     </body>
 
