fixed html errors

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -76,7 +76,6 @@
                     <fieldset id="fieldsetquestions">
                         <label class="top">Full Name* <input type="text" name="name" pattern="^.* .*$" required></label>
                         <label class="top">E-mail* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                        <legend>Send us a message</legend>
                         Message:
                         <textarea id="questions" name="questions" required>
                         </textarea>
@@ -103,9 +102,9 @@
             </div>
             <div>
                 <p>
-                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
+                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png" alt="twitter-icon"></a></p>
             </div>
         </footer>
     </body>
