--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -41,7 +41,7 @@
                 <table>
                     <tr>
                         <th class="rentaltype" colspan="6">HONDA SCOOTER</th>
-                    <tr>
+                    </tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
@@ -88,10 +88,11 @@
                 <table>
                     <tr>
                         <th class="rentaltype" colspan="6">ATV</th>
-                    <tr>
+                    </tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
+                    </tr>
                     <tr>
                     <th>RENTAL TYPE</th>
                     <th>MAX. PERSONS</th>
@@ -118,10 +119,11 @@
                 <table>
                     <tr>
                         <th class="rentaltype" colspan="6">JEEP</th>
-                    <tr>
+                    </tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
+                    </tr>
                     <tr>
                     <th>RENTAL TYPE</th>
                     <th>MAX. PERSONS</th>
@@ -165,9 +167,9 @@
             </div>
             <div>
                 <p>
-                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
+                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png" alt="twitter-icon"></a></p>
             </div>
         </footer>
     </body>
