--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -111,9 +111,9 @@
             </div>
             <div>
                 <p>
-                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png"></a><span class="socialdividers">.:.</span> 
-                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png"></span></a></p>
+                <a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.instagram.com/"><img src="images/instagram.png" alt="instagram-icon"></a><span class="socialdividers">.:.</span> 
+                <a target="_blank" href="https://www.twitter.com/"><img src="images/twitter.png" alt="twitter-icon"></a></p>
             </div>
         </footer>
     </body>
