fixed html errors

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -36,7 +36,7 @@
             <div class="rentals-div">
                 <div id="option1">
                     <picture id="rental-img1">
-                            <source id="scooter-large" srcset="images/scooter400.jpeg" media="(min-width: 400px)" alt="honda-large">
+                            <source id="scooter-large" srcset="images/scooter400.jpeg" media="(min-width: 400px)">
                         <img id="scooter-small"  src="images/scooter.png" alt="honda-small">
                     </picture>
                     <section id="rental-info1">
@@ -48,7 +48,7 @@
                 </div>
                 <div id="option2">
                     <picture id="rental-img2">
-                            <source id="atv-large" srcset="images/atv400.jpeg" media="(min-width: 400px)" alt="atv-large">
+                            <source id="atv-large" srcset="images/atv400.jpeg" media="(min-width: 400px)">
                         <img id="atv-small"  src="images/quad.png" alt="atv-small">
                     </picture>
                     <section id="rental-info2">
@@ -57,15 +57,14 @@
                     </section>  
                 </div>
                 <div id="option3">
-                    <picture id="rental-img1">
-                        <source id="jeep-large" srcset="images/jeep400.jpeg" media="(min-width: 400px)" alt="honda-large">
+                    <picture id="rental-img3">
+                        <source id="jeep-large" srcset="images/jeep400.jpeg" media="(min-width: 400px)">
                     <img id="jeep-small"  src="images/jeep.png" alt="honda-small">
                 </picture>
-                <section id="rental-info1">
-                    <h2>Honda Motor Scooters</h2>
-                    <p>Honda Metropolitan (49cc)—1 person</p>
-                    <p>Honda Dio (110cc)—2 person</p>
-                    <p>Honda PCX150 (149cc)—2 person</p>
+                <section id="rental-info3">
+                    <h2>Jeep Rentals</h2>
+                    <p>4-door Jeep Wrangler manual with A/C</p>
+                    <p>2-door Jeep Wrangler—open air—manual</p>
                 </section> 
                 </div>
             </div>
@@ -127,7 +126,7 @@
                     <h3>Paddling with view</h3>
                     <p>*Location: El Cielo Beach</p>
                 </div>
-                <div id="attraction3">
+                <div id="attraction4">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="images/attraction4.jpeg" 
@@ -138,7 +137,7 @@
             </div>
             <div class="weather-div">
                 <div id="current-weather-div">
-                    <h3>Current Weather</span></h3>
+                    <h3>Current Weather</h3>
                     <img id="c-icon" src="#" alt="c-icon" width="50">
                     <p>Description: <span id="c-description"></span></p>
                     <p class="stats">Humidity: <span id="c-humidity"></span>%</p>
